--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,12 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-#flask backend
+# flask backend
 backend/env
 backend/__pycache__
+
+# vscode
+.vscode
+
+# database
+backend/db/app.db
