--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,21 @@
+alembic==1.8.1
+blinker==1.5
 click==8.0.3
 Flask==2.0.2
 Flask-JWT-Extended==4.3.1
+Flask-Migrate==3.1.0
+Flask-SQLAlchemy==2.5.1
+Flask-WhooshAlchemy==0.56
+greenlet==1.1.2
+importlib-metadata==4.12.0
+importlib-resources==5.9.0
 itsdangerous==2.0.1
 Jinja2==3.0.3
+Mako==1.2.1
 MarkupSafe==2.0.1
 PyJWT==2.3.0
 python-dotenv==0.19.2
+SQLAlchemy==1.4.40
 Werkzeug==2.0.2
+Whoosh==2.7.4
+zipp==3.8.1
