--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.1.1",
     "react-scripts": "^5.0.1",
+    "sass": "^1.54.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
